# tiny-sam

./: .travis.yml  CMakeLists.txt  Makefile  Makefile.am  README.md  appveyor.yml  configure.ac  git-releasedate-gen
.github/workflows/: build.yml  makefile.yml
manual/: Makefile  Makefile.mk  basictex-osx.sh  bibliography.bib  latexmkrc  manual.tex  miktex-pkg-list.txt  texlive-ubuntu.sh  textlive-ubuntu.sh
src/: GreetingsProvider.cpp  GreetingsProvider.hpp  Makefile  Makefile.mk  hello.cpp  writeModels.cpp
test/: GreetingsProviderTests.cpp  Makefile.mk
test/integration/: CompareModelsTests.cpp  HelloIntegrationTests.cpp  HelloIntegrationTestsWithProgramOutput.cpp  Makefile.mk  WriteModelsTests.cpp  expected-cattle-mark-Out-1.txt
test/integration/createprocess/: CreateChildProcess.cpp  CreateParentProcess.cpp  Makefile.mk  ParentProcessText.txt
test/integration/utils/: Makefile.mk  TinySamIntegrationTestUtils.cpp  TinySamIntegrationTestUtils.h  TinySamIntegrationTestUtilsUnix.cpp  TinySamIntegrationTestUtilsWindows.cpp
test/unit/: Makefile.mk  factorial.cpp
test/utils/: Makefile.mk  TinySamRegressionResults.cpp  TinySamRegressionResults.h
